Fixed some css bugs on mobile.

--- a/assets/development/css/base.scss
+++ b/assets/development/css/base.scss
@@ -227,6 +227,9 @@ div.main-content {
 					border-color: $base-colour;
 				}
 			}
+			figcaption {
+				display: none;
+			}
 		}
 
 		aside {
